게시판 조회수, 댓글수+-, 게시글수 노출기능추가

--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -30,6 +30,16 @@ input.input_type01 {
 	color: #2A2A2A;
 }
 
+input.input_type02 {
+	background-color: #FFFFFF;
+	border: 1px solid #FED39F;
+	width: 400px;
+	padding: 5px;
+	font-family: Arial;
+	font-size: 20px;
+	color: #2A2A2A;
+}
+
 input.button_type01 {
 	background-color: #FE8761;
 	border: 2px solid #FFFFFF;
