게시글 검색기능 추가완료(디자인변경 필요)

--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -40,6 +40,10 @@ input.input_type02 {
 	color: #2A2A2A;
 }
 
+input.input_type03 {
+	width: 100px;
+}
+
 input.button_type01 {
 	background-color: #FE8761;
 	border: 2px solid #FFFFFF;
