mypage 나의 문의내역 검색 확인기능 추가

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -20,3 +20,10 @@ td.menu01 {
 	font-family: Arial;
 	text-align: center;
 }
+
+td.menu02 {
+	font-size: 15px;
+	color: #F6EEC9;
+	font-family: Arial;
+	text-align: center;
+}
