--- a/src/main/resources/static/css/title.css
+++ b/src/main/resources/static/css/title.css
@@ -36,7 +36,12 @@ td.picbox {
 	background-color: #330000;
 	align-content: center;
 	text-align: center;
-	
+}
+
+td.picbox1 {
+	background-color: #fef5d6;
+	align-content: center;
+	text-align: center;
 }
 
 td.titlebox {
