--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -44,6 +44,16 @@ input.input_type03 {
 	width: 100px;
 }
 
+input.input_type04 {
+	background-color: #FFFFFF;
+	border: 1px solid #FED39F;
+	width: 250px;
+	padding: 5px;
+	font-family: Arial;
+	font-size: 20px;
+	color: #2A2A2A;
+}
+
 input.button_type01 {
 	background-color: #FE8761;
 	border: 2px solid #FFFFFF;
@@ -98,6 +108,16 @@ textarea.textarea_text01 {
 	background-color: #FFFFFF;
 	border: 1px solid #FED39F;
 	width: 600px;
+	padding: 5px;
+	font-family: Arial;
+	font-size: 20px;
+	color: #2A2A2A;
+}
+
+select.select_type01 {
+	background-color: #FFFFFF;
+	border: 1px solid #FED39F;
+	width: 100px;
 	padding: 5px;
 	font-family: Arial;
 	font-size: 20px;
