--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -36,7 +36,7 @@ html, body {
   margin: 10px;
   height: 70%;
   align-items: center;
-  background-color: #ececec;
+  background-color: #e4e2e3;
 }
 
 #inputBox button {
@@ -47,7 +47,7 @@ html, body {
 	align-items: center;
 	width: 350px;
 	padding: 10px;
-	background-color: #ececec;
+	background-color: #e4e2e3;
 }
 
 .joinOkBox{
