관리자 회원전체관리 페이지 디자인 수정예정 // 그 외 디자인 완료

--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -43,7 +43,12 @@ html, body {
   padding: 3px 5px;
 }
 
+#input button > .sebtn {
+	text-align: center;
+}
+
 .joinBox {
+	margin-top: 50px;
 	align-items: center;
 	width: 350px;
 	padding: 10px;
